--- a/mongle/src/main/resources/templates/signup.mustache
+++ b/mongle/src/main/resources/templates/signup.mustache
@@ -106,7 +106,7 @@
     </form>
 
     <div class="switch-link">
-        이미 계정이 있으신가요? <a href="/login">로그인</a>
+        이미 계정이 있으신가요? <a href="/login-page">로그인</a>
     </div>
 </div>
 
