--- a/mongle/src/main/resources/templates/mainpage.mustache
+++ b/mongle/src/main/resources/templates/mainpage.mustache
@@ -136,7 +136,7 @@ h2 {
         <a href="/diary">일기 작성</a>
         <a href="/diarylist">일기 목록</a>
         <a href="/store">스토어</a>
-        <a href="/mypage">마이페이지</a>
+        <a href="/api/user/me">마이페이지</a>
     </nav>
     <div class="user-info">
         <span class="nickname">{{nickname}} 님</span>
