--- a/mongle/src/main/resources/templates/mypage.mustache
+++ b/mongle/src/main/resources/templates/mypage.mustache
@@ -132,7 +132,7 @@ h2 {
         <img src="/images/image.png" alt="몽글몽글">
     </div>
     <nav>
-        <a href="/api/diary">일기 작성</a>
+        <a href="write">일기 작성</a>
         <a href="/diarylist">일기 목록</a>
         <a href="/store">스토어</a>
         <a href="/api/user/me">마이페이지</a>
