feat : 분석 로직 수정 + 감정 리포트 구현

--- a/mongle/src/main/resources/templates/mypage.mustache
+++ b/mongle/src/main/resources/templates/mypage.mustache
@@ -132,9 +132,11 @@ h2 {
         <img src="/images/image.png" alt="몽글몽글">
     </div>
     <nav>
-        <a href="write">일기 작성</a>
+        <a href="/write">일기 작성</a>
         <a href="/diarylist">일기 목록</a>
         <a href="/store">스토어</a>
+        <a href="/mypayments">구매 목록</a>
+        <a href="/emotion/report">감정 리포트</a>
         <a href="/api/user/me">마이페이지</a>
     </nav>
     <div class="user-info">
@@ -157,7 +159,9 @@ h2 {
         <input type="text" name="nickname" placeholder="새 닉네임 입력" required style="padding:0.5rem; margin-bottom:1rem; width:100%; border-radius:0.5rem; border:1px solid #ccc;">
         <button class="btn" type="submit">닉네임 수정</button>
     </form>
-    <button class="btn">구매 아이템 보기</button>
+    <form action="/mypayments" method="get">
+        <button class="btn" type="submit">구매 아이템 보기</button>
+    </form>
     <form action="/logout" method="post">
         <button class="btn" type="submit">로그아웃</button>
     </form>
