--- a/mongle/src/main/resources/templates/diary.mustache
+++ b/mongle/src/main/resources/templates/diary.mustache
@@ -142,10 +142,12 @@
         <img src="/images/image.png" alt="몽글몽글">
     </div>
 
-    <nav class="nav-center">
+    <nav>
         <a href="/write">일기 작성</a>
         <a href="/diarylist">일기 목록</a>
         <a href="/store">스토어</a>
+        <a href="/mypayments">구매 목록</a>
+        <a href="/emotion/report">감정 리포트</a>
         <a href="/api/user/me">마이페이지</a>
     </nav>
 
